# praw-release

./: LICENSE.txt  pyproject.toml
.github/workflows/: run_tox.yaml
src/praw_release/: __init__.py  changes_utils.py  version_utils.py
tests/: test_changes_utils.py  test_praw_release.py  test_version_utils.py  utils.py
